Greate Update: 完善文件上传下载接口，实现基于策略模式的上传操作

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,7 +108,6 @@ redis-session:
 encryption:
   key: CAIXYRPOMISE
 
-
 thread-pool:
   instances:
     default:
@@ -117,3 +116,9 @@ thread-pool:
       queueCapacity: 30
       keepAliveSeconds: 120
       timeUnit: SECONDS
+
+# 文件存储
+storage:
+  location: uploads
+  forceCreated: true
+  staticPath: /static
