--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# 不需要上传的上传文件夹
+/uploads/
