chore: 修改redis配置，调整密码配置默认为注释状态

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
     host: 127.0.0.1
     port: 6379
     timeout: 5000
-    password: 123456
+    #password: #todo: set password if needed
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
 #  elasticsearch:
@@ -102,6 +102,10 @@ redis-session:
   instances:
     limiter:
       database: 1
+      host: 127.0.0.1
+      port: 6379
+    lock:
+      database: 3
       host: 127.0.0.1
       port: 6379
 
