--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -126,3 +126,51 @@ storage:
   location: uploads
   forceCreated: true
   staticPath: /static
+
+oauth2:
+  instance:
+    Github:
+      authServerUrl: https://github.com/login/oauth/authorize
+      accessTokenUrl: https://github.com/login/oauth/access_token
+      fetchInfoUrl: https://api.github.com/user
+      clientId: Ov23linP6FicPDQccva1
+      clientSecret: 19635956b8db7f74b2f4917bd1a42e9b84b9ed72
+      callBackUrl: http://localhost:7529/api/user/oauth2/github/callback
+
+info:
+  app:
+    name: ${spring.application.name}
+    description: This is my Spring Boot application.
+    version: 1.0.0
+    license: MIT
+    startup-time: ${app.startup-time}
+  author:
+    name: CAIXYPROMISE
+    email: caixypromised@gmail.com
+    github: https://github.com/CaixyPromise
+  build:
+    version: @Release.version@
+    date: @Release.date@
+    encoding: @project.build.sourceEncoding@
+  runtime:
+    java-version: ${java.version}
+    springBoot-version: @springboot.version@
+    osName: ${os.name}
+    osArch: ${os.arch}
+    osVersion: ${os.version}
+
+
+management:
+  endpoints:
+    web:
+      base-path: "/actuator"
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: "always"
+    info:
+      enabled: true
+  info:
+    env:
+      enabled: true
