--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -20,7 +20,7 @@ spring:
     password: 123456
   # Elasticsearch 配置
   # todo 需替换配置
-  elasticsearch:
-    uris: http://localhost:9200
-    username: root
-    password: 123456
+#  elasticsearch:
+#    uris: http://localhost:9200
+#    username: root
+#    password: 123456
