--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.2</version>
+        <version>2.7.6</version>
         <relativePath/>
     </parent>
     <groupId>com.caixy</groupId>
@@ -15,6 +15,10 @@
     <name>caixy-admin-system</name>
     <properties>
         <java.version>1.8</java.version>
+        <springboot.version>2.7.6</springboot.version>
+        <Release.version>1.0.0</Release.version>
+        <Release.date>2023-03-01</Release.date>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <!-- 验证码组件-->
@@ -30,6 +34,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Http请求器-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
@@ -137,8 +148,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${springboot.version}</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
